--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="utf-8">
     <title>Assignment 1 - Erik Tedder</title>
-    <script type="text/javascript" src=".../master/391/gameengine.js"></script>
-    <script type="text/javascript" src=".../master/391/assetmanager.js"></script>
-    <script type="text/javascript" src=".../master/391/main.js"></script>
+    <script type="text/javascript" src="https://github.com/tedderem/TCSS491/blob/master/391/gameengine.js"></script>
+    <script type="text/javascript" src="https://github.com/tedderem/TCSS491/blob/master/391/assetmanager.js"></script>
+    <script type="text/javascript" src="https://github.com/tedderem/TCSS491/blob/master/391/main.js"></script>
 </head>
 <body>
     <canvas id="gameWorld" tabindex="1" width="800" height="800" style="background: grey"></canvas>
