--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Assignment 1 - Erik Tedder</title>
+    <title>TCSS491</title>
     <script type="text/javascript" src="https://github.com/tedderem/TCSS491/blob/master/391/gameengine.js"></script>
     <script type="text/javascript" src="https://github.com/tedderem/TCSS491/blob/master/391/assetmanager.js"></script>
     <script type="text/javascript" src="https://github.com/tedderem/TCSS491/blob/master/391/main.js"></script>
