--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
+﻿
 <!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8">
-    <title>TCSS491</title>
-    <script type="text/javascript" src="https://github.com/tedderem/TCSS491/edit/master/391/gameengine.js"></script>
-    <script type="text/javascript" src="https://github.com/tedderem/TCSS491/edit/master/391/assetmanager.js"></script>
-    <script type="text/javascript" src="https://github.com/tedderem/TCSS491/edit/master/391/main.js"></script>
+    <title>Red 2</title>
+    <script type="text/javascript" src="./gameengine.js"></script>
+    <script type="text/javascript" src="./assetmanager.js"></script>
+    <script type="text/javascript" src="./main.js"></script>
 </head>
 <body>
     <canvas id="gameWorld" tabindex="1" width="800" height="800" style="background: grey"></canvas>
