--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Red 2</title>
+    <title>Prevail</title>
     <script type="text/javascript" src="./gameengine.js"></script>
     <script type="text/javascript" src="./assetmanager.js"></script>
     <script type="text/javascript" src="./main.js"></script>
+	<link href="index.css" type="text/css" rel="stylesheet" />
+	<link rel="icon" href="./img/favicon.ico" type="image/x-icon">
 </head>
 <body>
-    <canvas id="gameWorld" tabindex="1" width="800" height="800" style="background: grey"></canvas>
-	
+    <canvas id="gameWorld" tabindex="1" width="800" height="800"></canvas>
 </body>
 </html>
