--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
 	<link rel="icon" href="./img/favicon.ico" type="image/x-icon">
 </head>
 <body>
-    <canvas id="gameWorld" tabindex="1" width="800" height="800" style="border: 2px solid black"></canvas>
+    <center><canvas id="gameWorld" tabindex="1" width="800" height="800" style="border: 2px solid black"></canvas></center>
 </body>
 </html>
