--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
 	<link rel="icon" href="./img/favicon.ico" type="image/x-icon">
 </head>
 <body>
-    <center>Disclaimer: For best performance and playability use Google's Chrome browser<br><canvas id="gameWorld" tabindex="1" width="800" height="800" style="border: 2px solid black"></canvas></center>
+    Disclaimer: For best performance and playability use Google's Chrome browser<br><canvas id="gameWorld" tabindex="1" width="800" height="800" style="border: 2px solid black"></canvas>
 </body>
 </html>
