Upgraded building system
Building system no longer allows the placement of towers ontop of
pre-existing buildings. You can cancel the building process by hitting
spacebar.

--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
 	<link rel="icon" href="./img/favicon.ico" type="image/x-icon">
 </head>
 <body>
-    Disclaimer: For best performance and playability use Google's Chrome browser<br><canvas id="gameWorld" tabindex="1" width="800" height="800" style="border: 2px solid black"></canvas><br>Cheats:<br>Holding 'Shift' and clicking attacks all enemies<br>Pressing '0' removes all enemies, grants 10k bitcoins, and 5 levels
+    Disclaimer: For best performance and playability use Google's Chrome browser<br><canvas id="gameWorld" tabindex="1" width="800" height="800" style="border: 2px solid black"></canvas><br>Cheats:<br>Holding 'Shift' and clicking attacks all enemies<br>Pressing '0' removes all enemies, gives 10k BitCoins, and advances 5 levels
 </body>
 </html>
