additional css modifications
CSS style modifications

--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
 	<link rel="icon" href="./img/favicon.ico" type="image/x-icon">
 </head>
 <body>
-    Disclaimer: For best performance and playability use Google's Chrome browser<br><canvas id="gameWorld" tabindex="1" width="800" height="800" style="border: 2px solid black"></canvas><br>Cheats:<br>Holding 'Shift' and clicking attacks all enemies<br>Pressing '0' removes all enemies, gives 10k BitCoins, and advances 5 levels
+	<div id="title">
+		<h1>Prevail</h1> 
+		<p>Disclaimer: Requires Google's Chrome browser for best stability and playability</p>
+	</div>
+	<canvas id="gameWorld" tabindex="1" width="800" height="800" style="border: 2px solid black"></canvas>
+	<div id="cheats">
+		<h1>Cheats</h1>
+		<p>Holding 'Shift' and clicking attacks all enemies.<br>Pressing '0' removes all enemies, gives 10k BitCoins, and advances 5 levels</p>
+		</div>
 </body>
 </html>
